Replace calculator example with TestNG library examples (StringUtils and MathUtils)
Co-authored-by: gliptak <50109+gliptak@users.noreply.github.com>